# brpc-template

./: .gitignore  BUILD.bazel  README.md  WORKSPACE
inc/: db_service.h
proto/: interface.proto
src/: client.cpp  db_client.cpp  db_main.cpp  db_service.cpp  server.cpp
