# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Thie empty BUILD.bazel file is required to make Bazel treat
# this directory as a package.


############################ 编译proto文件 ############################
proto_library(
    name = "hilbert_proto",
    srcs = glob(["proto/*.proto"]),
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

cc_proto_library(
    name = "cc_hilbert_proto",
    deps = [":hilbert_proto"],
)

cc_binary(
    name = "db_client",
    srcs = ["src/db_client.cpp"],
    deps = [
        ":cc_hilbert_proto",
        "@apache_brpc//:brpc",
        "@apache_brpc//:bthread",
        "@apache_brpc//:bvar",
        "@apache_brpc//:butil",
    ],
    includes = ["proto/"],
)

cc_binary(
    name = "db_server",
    srcs = ["src/db_service.cpp"],
    deps = [
        ":cc_hilbert_proto",
        "@apache_brpc//:brpc",
        "@apache_brpc//:bthread",
        "@apache_brpc//:bvar",
        "@apache_brpc//:butil",
    ],
    includes = ["proto/"],
)
